2013-08-07 Borut Razem <borut.razem AT gmail.com>

	* lib/doc-archive.mk: foxed copying of pdf documents
	  html documentation copying commented out since it is not
	  generated any more

2013-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Enable stm8 regression testing.

2013-05-30 Raphael Neider <rneider AT web.de>

	* components/sdcc.mk: remove --enable-new-pics

2013-03-15 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk, lib/fetch.mk: introduced SVN_ROOT

2013-03-12 Borut Razem <borut.razem AT gmail.com>

	* sdcc-build-bootstrap.sh: changed SVNROOT after after project transition to Allura

2012-12-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* local/cf-ppc-macosx.mk: created for Mac OS X 10.5 PPC machine
	  generating universal-apple-macosx snapshots

2012-08-17 Borut Razem <borut.razem AT gmail.com>

	* local/wizard.mk: renamed, removed fsigned-char since sdcc now
	  compiles correcty on ARM where the default "char" is "unsigned char"

2012-08-15 Borut Razem <borut.razem AT gmail.com>

	* local/wizzard.mk: spawn 1 make process:
	  spawning 2 processes leads to a compilation error

2012-08-13 Borut Razem <borut.razem AT gmail.com>

	* local/wizzard.mk: use -fsigned-char since ARM default is unsigned char

2012-08-12 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk: reintroduced CROSSREGTESTTARGETS, 2nd try

2012-08-11 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk: reintroduced CROSSREGTESTTARGETS

2012-08-08 Borut Razem <borut.razem AT gmail.com>

	* sdcc-build-bootstrap.sh:
	  maximum age of lockfile increased to 1440 minutes = 1 day
	* lib/variables.mk: CROSSREGTESTTARGETSx renamed to
	  REGTESTTARGETSx since they have nothing to do wit cross-compiletion
	* local/mypants.mk: removed useless SLOWHOST definition
	* local/wizzard.mk:
	  created for Rasbian (Debian on Raspberry Pi) ARMv6 armhf machine

2012-06-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
